<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XNote</string>
    <string name="navigation_notes">笔记</string>
    <string name="navigation_agent">Agent</string>
    <string name="navigation_stickers">贴纸库</string>
    <string name="navigation_profile">我的</string>
    <string name="action_search">搜索</string>
    <string name="action_back">返回</string>
    <string name="action_create_note">新建笔记</string>
    <string name="notes_title">XNote</string>
...
    <string name="notes_selection_count">已选 %1$d 项</string>
    <string name="notes_cancel_selection">取消选择</string>
    <string name="notes_reorder_handle">拖动排序</string>
    <string name="action_create_notebook">创建</string>
    <string name="action_rename">重命名</string>
    <string name="action_delete">删除</string>
    <string name="action_more">更多</string>
    <string name="action_undo">撤销</string>
    <string name="action_redo">重做</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="editor_title_placeholder">标题</string>
    <string name="editor_save_failed">未能保存笔记</string>
...
